--- a/geonet_obspy_utils/clients/aws/client_config.yml
+++ b/geonet_obspy_utils/clients/aws/client_config.yml
@@ -1,3 +1,8 @@
+GEOFON:
+  base_url: https://s3.gfz-potsdam.de
+  waveform_bucket_name: gc.ge
+  filename: "{year}/{network}/{station}/{channel}.D/{network}.{station}.{location}.{channel}.D.{year}.{day_of_year:03d}/"
+
 GEONET:
   base_url: https://geonet-open-data.s3.ap-southeast-2.amazonaws.com
   waveform_bucket_name: geonet-open-data
